@@ -832,7 +832,7 @@ dnl =======================
 
 
 dnl Checks for i18n
-ALL_LINGUAS="az ca cs da de el en_GB es fi fr ga gl hu it ja ko lt nl nn no pl pt_BR ru sk sl sv ta tr uk zh_TW.Big5"
+ALL_LINGUAS="az ca cs da de el en_GB es fi fr ga gl hu it ko lt nl nn no pl pt_BR ru sk sl sv ta tr uk zh_TW.Big5"
 AM_GNOME_GETTEXT
 # AM_GNOME_GETTEXT above substs $DATADIRNAME
 # this is the directory where the *.{mo,gmo} files are installed
